committing the changes of the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sethu Nagappan | Portfolio</title>
+		<title>Portfolio Gallery</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/lightbox.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
